--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.2",
   "description": "Efficiently AWS SSO Login with CUI Selector",
   "exports": "./index.js",
-  "homepage": "https://github.com/tacck/awss",
+  "homepage": "https://github.com/tacck/awssol",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "./postinstall.sh"
